--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -14,6 +14,10 @@
                 <source>settings</source>
                 <target>Settings</target>
             </trans-unit>
+            <trans-unit id="warehouses">
+                <source>warehouses</source>
+                <target>Warehouses</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
